--- a/src/index.css
+++ b/src/index.css
@@ -27,12 +27,17 @@ a:hover {
   color: #535bf2;
 }
 
+html{
+  height: 100%;
+  width: 100%;
+}
 body {
   margin: 0;
-  display: flex;
+  /* display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100vh; */
+  height: 100%;
 }
 
 h1 {
