--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+@import 'node_modules/scroll-carousel/dist/scroll.carousel.min.css';
 #root {
   max-width: 1280px;
   width: 100%;
