--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import 'node_modules/scroll-carousel/dist/scroll.carousel.min.css';
+/* @import 'node_modules/scroll-carousel/dist/scroll.carousel.min.css'; */
 #root {
   max-width: 1280px;
   width: 100%;
  
-  /* margin: 0 auto; */
+  margin: 0 auto;
   /* padding: 2rem; */
   /* text-align: center; */
 }
