--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 /* @import 'node_modules/scroll-carousel/dist/scroll.carousel.min.css'; */
 #root {
-  max-width: 90%;
+  max-width: 1280px;
   width: 100%;
  
   margin: 0 auto;
