--- a/src/index.css
+++ b/src/index.css
@@ -19,12 +19,12 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+  /* font-weight: 500; */
+  /* color: #646cff; */
+  /* text-decoration: inherit; */
 }
 a:hover {
-  color: #535bf2;
+  /* color: #535bf2; */
 }
 
 html{
@@ -71,7 +71,8 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    /* color: #747bff; */
+    
   }
   button {
     background-color: #7AB2B2;
