--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,19 @@
 @tailwind utilities;
 /* @import 'node_modules/scroll-carousel/dist/scroll.carousel.min.css'; */
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   width: 100%;
  
   margin: 0 auto;
   /* padding: 2rem; */
   /* text-align: center; */
+}
+main {
+    max-width: 1280px;
+    width: 100%;
+    margin: 0 auto;
+    /* padding: 2rem; */
+    /* text-align: center; */
 }
 
 .logo {
